<resources>
    <string name="app_name">아띠어리</string>
    <string name="click_this_btn">Click this button!</string>
    <string name="register_email">이메일 등록</string>
    <string name="register_email_edit">이메일을 입력하세요.</string>
    <string name="register_name">닉네임 등록</string>
    <string name="register_name_edit">닉네임을 입력하세요.</string>
    <string name="register_birth">생일 등록</string>
    <string name="setting_password_button">앱 비밀번호 설정</string>
    <string name="signup_button">완료</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="back_button">뒤로가기</string>
    <string name="signup_view_button">SignUp 실행</string>

    <string name="new_pw_info">새 암호를 입력해주세요.</string>
    <string name="verify_pw_info">다시 한 번 입력해주세요.</string>
    <string name="warning_pw_info">암호가 일치하지 않습니다.</string>
    <string name="enter_pw">암호 입력</string>
    <string name="enter_pw_info">암호를 입력해주세요.</string>
    <string name="ratio_desc">이번 달에 느낀 감정 비율이야!</string>
    <string name="ratio_toolbar"> 이 달의 마음 통계</string>
    <string name="happy_desc">이번 달 행복 그래프야!</string>
    <string name="sad_desc">이번 달 우울 그래프야!</string>
    <string name="top3_desc">이번 달 중 가장 행복했던 날에는 \n어떤 일이 있었어?</string>
    <string name="top1_diary">TOP 1 일기</string>
    <string name="top2_diary">TOP 2 일기</string>
    <string name="top3_diary">TOP 3 일기</string>

    <string name="music_text">지금 내 감정은..</string>
    <string name="happiness">기뻐요</string>
    <string name="anger">화가 나요</string>
    <string name="anxiety">불안해요</string>
    <string name="hope">희망차요</string>
    <string name="regret">후회돼요</string>
    <string name="sadness">슬퍼요</string>
    <string name="tiredness">지쳐요</string>
    <string name="fromAtti">아띠가 하고 싶은 말이 있대요!</string>
    <string name="setting">설정</string>
    <string name="changeNickname"><u>수정</u></string>
    <string name="dDay">마음 적립</string>
    <string name="myAccount">내 계정</string>
    <string name="logout">로그아웃</string>
    <string name="myBirthday">생일</string>
    <string name="changeBday">변경</string>
    <string name="sigMusic">배경음악</string>
    <string name="emoMusic">실시간 감정 음악</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="setPW">앱 잠금 설정</string>
    <string name="changePW">암호 변경</string>
    <string name="save">확인</string>
    <string name="chatBotModel">아띠 성격 선택</string>
    <string name="saveUnderline"><u>확인</u></string>
    <string name="pwWarning">※ 암호를 분실했을 경우 앱을 삭제하고 재설치 해야하며,\n 재설치 시 기존 일기 및 유저 데이터는 삭제됩니다.</string>
    <string name="emoMusicInstruction">일기 작성 시 감정을 감지하여 배경음악을 바꾸어주는 기능입니다.</string>
    <string name="loading">잠시만 기다려주세요!\n 아띠가 열심히 연구 중이랍니다!</string>
    <string name="serverError1">죄송합니다…\n지금 연구실에 문제가 생겼어요.</string>
    <string name="serverError2">일단 일기 내용을 저장해둘게요! 다음에 다시 시도해주세요. \n\n해당 날짜 일기에 들어가 수정 버튼을 누른 뒤 재저장해주시면\n아띠가 다시 노력해볼게요!</string>
    <string name="sympathyAtti">공감형 아띠</string>
    <string name="sympathyDescribe">조금 더 발랄한 성격을 \n 가지고 있어요. \n\n 내용에 따라 \n다양한 반응을 보는 재미가 \n있을지도 몰라요. \n\n 아띠와 함께 꾸준히 일기를 써봐요. \n\n 언제든 기다리고 있을게요.</string>
    <string name="consolationAtti">위로형 아띠</string>
    <string name="consolationDescribe">세상 따뜻한 성격을 \n 가지고 있어요. \n\n분노, 불안, 후회, 슬픔, 피곤 등 \n 부정적인 감정이\n 많이 느껴지는 날에 \n불러주세요. \n\n 아띠가 위로해드릴게요.</string>
    <string name="attiTalk">오늘은 어떤 하루였나요?</string>
    <string name="chooseSympathy">오늘은 일상적인 하루였어요.</string>
    <string name="chooseConsolation">오늘은 특히 힘들었어요.</string>
    <string name="setRepresentative">대표 감정 선택</string>
    <string name="setRepresentativeD">아띠가 감지한 감정 대신 원하는 감정을\n대표 감정으로 설정할 수 있어요.</string>
</resources>