<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverError1"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/ImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/im_hyemin_bold"
        />

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/error_atti_img"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverError2"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintTop_toBottomOf="@id/ImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/im_hyemin_bold"
        />

    <Button
        app:layout_constraintTop_toBottomOf="@id/errorTextView"
        android:id="@+id/btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:fontFamily="@font/im_hyemin_bold"
        android:textColor="@color/black"
        android:background="@drawable/round_btn"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>