<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background"
    tools:context=".view.signature.MonthlyReportFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="@string/ratio_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_hyemin_bold"
        android:text="@string/ratio_toolbar"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/toolbar_back_btn"
        android:layout_width="21dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ratio_atti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/talking_atti"
        app:layout_constraintEnd_toStartOf="@+id/ratio_balloon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/ratio_balloon"
        android:layout_width="264dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/monthly_report_balloon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ratio_atti"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/ratio_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_heymin_regular"
        android:text="@string/ratio_desc"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ratio_balloon"
        app:layout_constraintEnd_toEndOf="@+id/ratio_balloon"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/ratio_balloon"
        app:layout_constraintTop_toTopOf="@+id/ratio_balloon"
        app:layout_constraintVertical_bias="0.583" />

    <View
        android:id="@+id/pie_chart_back_view"
        android:layout_width="348dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/yellow_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratio_balloon" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/pie_chart_back_view"
        app:layout_constraintEnd_toEndOf="@+id/pie_chart_back_view"
        app:layout_constraintStart_toStartOf="@+id/pie_chart_back_view"
        app:layout_constraintTop_toTopOf="@+id/pie_chart_back_view" />

    <ImageView
        android:id="@+id/happy_balloon"
        android:layout_width="264dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/monthly_report_balloon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/happy_atti"
        app:layout_constraintTop_toBottomOf="@+id/pie_chart_back_view" />

    <TextView
        android:id="@+id/happy_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_heymin_regular"
        android:text="@string/happy_desc"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/happy_balloon"
        app:layout_constraintEnd_toEndOf="@+id/happy_balloon"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@+id/happy_balloon"
        app:layout_constraintTop_toTopOf="@+id/happy_balloon" />

    <ImageView
        android:id="@+id/happy_atti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/talking_atti"
        app:layout_constraintEnd_toStartOf="@+id/happy_balloon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pie_chart_back_view" />

    <View
        android:id="@+id/happy_chart_back_view"
        android:layout_width="348dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/yellow_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happy_balloon" />

</androidx.constraintlayout.widget.ConstraintLayout>